k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javasonar-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: javasonar
  template:
    metadata:
      labels:
        app: javasonar
    spec:
      containers:
      - name: javasonar
        image: siddhant271299/javasonar:latest
        ports:
        - containerPort: 8081
