k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javasonar-service
spec:
  type: ClusterIP
  selector:
    app: javasonar
  ports:
    - port: 80
      targetPort: 8081
